Added Bottom Bar

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,18 @@
                 </div>
             </div>
         </div>
+        <div class="p-2 bg-ctp-base pt-2 pb-2 w-screen h-6 flex flex-row bottom-0 absolute text-xs items-center" style="-webkit-app-region: drag; user-select: none;" id="bottombar-container">
+            <div class="flex items-center h-6 gap-1 pl-5" id="bottombar">
+                <div id="bottom-items" class="flex gap-1">
+                </div>
+            </div>
+        </div>
+        <!--<div class="p-2 bg-ctp-base pt-2 pb-2 w-12 h-screen top-20 right-0.5 absolute" style="-webkit-app-region: drag; user-select: none;">
+            <div class="flex items-center h-6 flex-col gap-1">
+                <div class="flex flex-col gap-1">
+                </div>
+            </div>
+        </div>-->
         <script src="script.js"></script>       
     </body>
 </html>
