--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,21 @@
                 </div>
             </div>
         </div>
-        <div class="p-2 bg-ctp-base pt-2 pb-2 w-72 h-screen top-20 right-0.5 absolute" style="user-select: none;" id="rightbar-container">
-            <div class="flex items-center h-6 flex-col gap-1" id="rightbar">
-                <div class="flex flex-col gap-1" id="right-items">
+        <div class="bg-ctp-base w-72 h-screen top-20 right-0.5 absolute" style="user-select: none;" id="rightbar-container">
+            <div class="flex flex-col gap-1 h-80" id="rightbar">
+                <div class="flex flex-row bg-ctp-mantle" id="right-tabs">
+                    <div class="relative">
+                        <button id="dropdownBtn" class="px-2 py-2 border-l-2 border-ctp-base h-10"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 512" width="15" height="15"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path class="fill-current" d="M64 64c0-17.7-14.3-32-32-32S0 46.3 0 64L0 448c0 17.7 14.3 32 32 32s32-14.3 32-32L64 64zm128 0c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 384c0 17.7 14.3 32 32 32s32-14.3 32-32l0-384z"/></svg></button>
+                        <div id="dropdownMenu" class="absolute right-0 w-max bg-ctp-mantle shadow-lg hidden text-xs">
+                            <ul id="right-dropdown">
+                                <li><a href="#" class="block px-4 py-2 hover:bg-ctp-surface0">Option 1</a></li>
+                                <li><a href="#" class="block px-4 py-2 hover:bg-ctp-surface0">Option 2</a></li>
+                                <li><a href="#" class="block px-4 py-2 hover:bg-ctp-surface0">Option 3</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-row gap-1" id="right-items">
                 </div>
             </div>
         </div>
