Added Color Preview

--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,7 @@
             </div>
         </div>
         <script src="../dist/iro.js"></script>
-        <script src="script.js"></script>  
+        <script src="lib.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
