Added Palette Part 1

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="../dist/styles.css" rel="stylesheet">
+        <link href="dist/styles.css" rel="stylesheet">
+        <link rel="stylesheet" href="dist/themes/nano.min.css"/>
         <title>Designer</title>
     </head>
     <body class="ctp-mocha text-ctp-text bg-ctp-crust border-ctp-surface2 border h-screen overflow-hidden">
@@ -67,7 +68,8 @@
                 </div>
             </div>
         </div>
-        <script src="../dist/iro.js"></script>
+        <script src="dist/iro.js"></script>
+        <script src="dist/pickr.min.js"></script>
         <script src="lib.js"></script>
         <script src="script.js"></script>
     </body>
